CRUD actions created

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,5 @@
+<%- include('partials/_header')-%>
+<%- include('partials/_navigation')-%>
 <section class="page-section" id="contact">
     <div class="container">
         <div class="text-center">
@@ -61,3 +63,4 @@
         </form>
     </div>
 </section>
+<%- include('partials/_footer')-%>
