--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,3 +1,5 @@
+<%- include('partials/_header')-%>
+<%- include('partials/_navigation')-%>
 <section class="page-section" id="services">
     <div class="container">
         <div class="text-center">
@@ -32,3 +34,4 @@
         </div>
     </div>
 </section>
+<%- include('partials/_footer')-%>
