--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,31 +1,23 @@
 <%- include('partials/_header')-%>
 <%- include('partials/_navigation')-%>
-<form id="contactForm" data-sb-form-api-token="API_TOKEN">
+<form method="POST" action="/photos" id="contactForm" encType="multipart/form-data">
     <div class="row align-items-stretch mb-5">
-        <div class="col-md-6">
+        <div class="col-md-4 m-5">
             <div class="form-group">
                 <!-- Name input-->
-                <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                <input class="form-control" id="name" name="title" type="text" placeholder="Photo Title" data-sb-validations="required" />
             </div>
             <div class="form-group">
-                <!-- Email address input-->
-                <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
-                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-            </div>
-            <div class="form-group mb-md-0">
                 <!-- Phone number input-->
-                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                <input class="form-control" id="phone"  name="description" type="tel" placeholder="Photo Description" data-sb-validations="required" />
             </div>
         </div>
-        <div class="col-md-6">
-            <div class="form-group form-group-textarea mb-md-0">
-                <!-- Message input-->
-                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+        <div class="col-md-4 m-5">
+            <div class="form-group">
+                <input type="file" name="image" class="form-control-file rounded-0">
+                <button class="btn btn-primary btn-xl " type="submit">Add Photo</button>
             </div>
+              
         </div>
     </div>
     <!-- Submit success message-->
@@ -46,6 +38,6 @@
     <!-- an error submitting the form-->
     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
     <!-- Submit Button-->
-    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+   
 </form>
 <%- include('partials/_footer')-%>
