--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,32 +1,22 @@
 <%- include('partials/_header')-%>
 <%- include('partials/_navigation')-%>
-<form id="contactForm" data-sb-form-api-token="API_TOKEN">
+<form id="contactForm" method="POST" action="/photos/<%= photo._id %>?_method=PUT" encType="multipart/form-data">
     <div class="row align-items-stretch mb-5">
-        <div class="col-md-6">
+        <div class="col-md-4 m-5">
+            <h2 class="tm-page-title mb-4 tm-text-primary">Edit The Photo</h2>
+            <div class="form-group mb-2">
+                <!-- Photo Title input-->
+                <input class="form-control" id="name" name="title" type="text"  value="<%= photo.title %>" placeholder="Photo Title" data-sb-validations="required" />
+            </div>
+           
             <div class="form-group">
-                <!-- Name input-->
-                <input class="form-control" id="name" type="text" placeholder="Your Name *" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                <!-- Photo Description input-->
+                <input class="form-control mb-2" id="phone" name="description" type="tel" placeholder="Photo Description" data-sb-validations="required" value="<%= photo.description %>" /> 
+                <button class="btn btn-primary btn-xl" id="submitButton" type="submit">Update</button>
             </div>
-            <div class="form-group">
-                <!-- Email address input-->
-                <input class="form-control" id="email" type="email" placeholder="Your Email *" data-sb-validations="required,email" />
-                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
-            </div>
-            <div class="form-group mb-md-0">
-                <!-- Phone number input-->
-                <input class="form-control" id="phone" type="tel" placeholder="Your Phone *" data-sb-validations="required" />
-                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
-            </div>
+            
         </div>
-        <div class="col-md-6">
-            <div class="form-group form-group-textarea mb-md-0">
-                <!-- Message input-->
-                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
-                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
-            </div>
-        </div>
+        
     </div>
     <!-- Submit success message-->
     <!---->
@@ -46,6 +36,6 @@
     <!-- an error submitting the form-->
     <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
     <!-- Submit Button-->
-    <div class="text-center"><button class="btn btn-primary btn-xl text-uppercase disabled" id="submitButton" type="submit">Send Message</button></div>
+    
 </form>
 <%- include('partials/_footer')-%>
