--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -7,8 +7,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                <li class="nav-item <%= page_name ==='index' && 'active' %>"><a class="nav-link" href="/services">Services</a></li>
+                <li class="nav-item <%= page_name ==='services' && 'active' %>"><a class="nav-link" href="/services">Services</a></li>
                 <li class="nav-item <%= page_name ==='photos' && 'active' %>"><a class="nav-link" href="/photos">Portfolio</a></li>
+                <li class="nav-item <%= page_name ==='add' && 'active' %>"><a class="nav-link" href="/add">Add Photo</a></li>
                 <li class="nav-item <%= page_name ==='about' && 'active' %>"><a class="nav-link" href="/about">About</a></li>
                 <li class="nav-item <%= page_name ==='team' && 'active' %>"><a class="nav-link" href="/team">Team</a></li>
                 <li class="nav-item <%= page_name ==='contact' && 'active' %>"><a class="nav-link" href="/contact">Contact</a></li>
