--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -8,21 +8,23 @@
             <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
         </div>
         <div class="row">
+            <% for(let i =0;i<photos.length;i++){ %>
             <div class="col-lg-4 col-sm-6 mb-4">
                 <!-- Portfolio item 1-->
                 <div class="portfolio-item">
-                    <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
+                    <a class="portfolio-link" href="/photos/<%= photos[i]._id %>">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                         </div>
-                        <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+                        <img class="img-fluid" src="<%= photos[i].image %>" alt="..." />
                     </a>
                     <div class="portfolio-caption">
-                        <div class="portfolio-caption-heading">Threads</div>
-                        <div class="portfolio-caption-subheading text-muted">Illustration</div>
+                        <div class="portfolio-caption-heading"><%= photos[i].title %></div>
+                        <div class="portfolio-caption-subheading text-muted"><%= photos[i].description %></div>
                     </div>
                 </div>
             </div>
+            <% } %>
             </div>
         </div>
     </div>
